add bitcoin mining enable button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <button id="writeFpgaBitstream" class="bitstream-btn">
                     Write FPGA Bitstream
                 </button>
+                <button id="Bitcoin Mining" class="bitcoin-mining-btn">
+                    Start Mining Bitcoin
+                </button>
                 <input type="file" id="bitstreamInput" hidden>
             </div>
 
