--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="content">
                 <h2>NyanOS (NOS) Graphical User Interface</h2>
                 <p>A basic interface to your keyboard - Click the Nyan cat and get connected.</p>
+                <!-- XTerm Javascript Terminal -->
                 <div id="terminal"></div>
             </div>
 
